[tool.poetry]
name = "negargparse"
version = "0.2.0.dev2"
description = ""
authors = ["Sriram Krishna <ksri91@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/k-sriram/negargparse"
repository = "https://github.com/k-sriram/negargparse"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5" # Lowest: see https://github.com/pytest-dev/pytest/pull/8540
flake8 = "^4.0.1" # >=3.7, use of per-file-ignore
black = "^21.11b0"
mypy = "^0.910"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.2.0a2"] # Lowest: was having problems with https://github.com/python-poetry/poetry/issues/2855
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
disallow_untyped_defs = false


[tool.pytest.ini_options]
minversion = "6.2.5"
xfail_strict = true
testpaths = [
    "tests"
]
python_functions = [
    "test_*",
    "example_*",
    "validate_*"
]
markers = [
    "testvalid: validates tests"
]
